@@ -1,5 +1,7 @@
 2014-06-21  Carl Hetherington  <cth@carlh.net>
 
+	* Move email config into the KDM email page.
+
 	* Version 1.69.33 released.
 
 2014-06-21  Carl Hetherington  <cth@carlh.net>
